2008-01-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (read_char): Yet another int/Lisp_Object mixup (YAILOM).

2008-01-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in: Remove references to unused macros.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (g_b_init_get_sid_sub_authority)
	(g_b_init_get_sid_sub_authority_count): New static variables.
	(GetSidSubAuthority_Proc, GetSidSubAuthorityCount_Proc): New typedefs.
	(get_sid_sub_authority, get_sid_sub_authority_count): New functions.
	(init_user_info): Use them to retrieve uid and gid.
	Use 500/513, the Windows defaults, as Administrator's uid/gid.
	(fstat): Use pw_uid and pw_gid from the_passwd structure for
	st_uid and st_gid of the file.

2008-01-26  Jason Rumney  <jasonr@gnu.org>

	* w32.c (logon_network_drive): New function.
	(stat): Use it.

2008-01-26  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (pos_visible_p): Handle the case where charpos falls on
	invisible text covered with an ellipsis.

2008-01-25  Richard Stallman  <rms@gnu.org>

	* xdisp.c (redisplay_window): Run Qwindow_text_change_functions and
	jump back to beginning.  Move some other initializations after that.
	(Qwindow_text_change_functions, Vwindow_text_change_functions):
	New variables.
	(syms_of_xdisp): Init them.

	* keyboard.c (read_char): Restore echo_message_buffer after redisplay.

	* buffer.c (reset_buffer_local_variables):
	Implement `permanent-local-hook'.
	(Qpermanent_local_hook): New variable.
	(syms_of_buffer): Init and staticpro it.

2008-01-25  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_retrieve_arg): Pacify GCC on x86_64 GNU/Linux.

2008-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* fns.c (Fclrhash): Return TABLE.

2008-01-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (x_scroll_bar_create): Initialize bar->redraw_needed_p.
	(XTset_vertical_scroll_bar): Redraw scroll bar if bar->redraw_needed_p
	is set even without positional changes.